@@ -28,6 +28,20 @@ output:
     # [beatname-]YYYY.MM.DD keys.
     #index: "beatname"
 
+    # A template is used to set the mapping in elasticsearch
+    # By default template loading is disabled an not template is loaded.
+    # These settings can be adjusted to load your own template or overwrite existing ones
+    #template:
+
+      # Template name. By default the template name is the same as the beatname
+      #name: "beatname"
+
+      # Path to template file
+      #path: "beatname.template.json"
+
+      # Overwrite existing template
+      #overwrite: false
+
     # Optional HTTP Path
     #path: "/elasticsearch"
 
