@@ -54,6 +54,20 @@ output:
     # [topbeat-]YYYY.MM.DD keys.
     #index: "topbeat"
 
+    # A template is used to set the mapping in elasticsearch
+    # By default template loading is disabled an not template is loaded.
+    # These settings can be adjusted to load your own template or overwrite existing ones
+    #template:
+
+      # Template name. By default the template name is the same as the topbeat
+      #name: "topbeat"
+
+      # Path to template file
+      #path: "topbeat.template.json"
+
+      # Overwrite existing template
+      #overwrite: false
+
     # Optional HTTP Path
     #path: "/elasticsearch"
 
